--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,53 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rmrf.navvi"
-    android:versionCode="1"
-    android:versionName="1.0" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.rmrf.navvi">
 
-    <uses-sdk
-        android:minSdkVersion="19"
-        android:targetSdkVersion="19" />
+    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="19"/>
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
-    <uses-feature
-        android:name="android.hardware.bluetooth_le"
-        android:required="true" />
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.rmrf.navvi.MainActivity"
-            android:label="@string/app_name" >
+    <application android:allowBackup="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:theme="@style/AppTheme">
+        <activity android:label="@string/app_name" android:name="com.rmrf.navvi.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.rmrf.navvi.SelectLocationActivity"
-            android:label="@string/title_activity_select_location" >
+        <activity android:label="@string/title_activity_select_location" android:name="com.rmrf.navvi.SelectLocationActivity">
         </activity>
-        <activity
-            android:name="com.rmrf.navvi.LocationActivity"
-            android:label="@string/title_activity_location"
-            android:parentActivityName="com.rmrf.navvi.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.rmrf.navvi.MainActivity" />
+        <activity android:label="@string/title_activity_location" android:name="com.rmrf.navvi.LocationActivity" android:parentActivityName="com.rmrf.navvi.MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY" android:value="com.rmrf.navvi.MainActivity"/>
         </activity>
-        <activity
-            android:name="com.rmrf.navvi.InternalMapsActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_internal_maps"
-            android:theme="@style/FullscreenTheme" >
+        <activity android:configChanges="orientation|keyboardHidden|screenSize" android:label="@string/title_activity_internal_maps" android:name="com.rmrf.navvi.InternalMapsActivity" android:theme="@style/FullscreenTheme">
         </activity>
+    <service android:enabled="true" android:exported="true" android:isolatedProcess="false" android:label="iBeacon" android:name="com.radiusnetworks.ibeacon.service.IBeaconService">
+    </service>
+
+    <service android:enabled="true" android:name="com.radiusnetworks.ibeacon.IBeaconIntentProcessor">
+    </service>
     </application>
 
 </manifest>
